--- a/app/src/main/res/layout/frame_settings.xml
+++ b/app/src/main/res/layout/frame_settings.xml
@@ -4,8 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical"
-    >
+    android:orientation="vertical">
     <com.google.android.material.card.MaterialCardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -24,7 +23,7 @@
                 android:layout_marginTop="16dp"
                 android:layout_marginStart="16dp"
                 android:layout_marginBottom="16dp"
-                android:text="@string/PIN_login"
+                android:text="@string/PIN_BIO_login"
                 android:textSize="16sp"
                 />
             <Button
@@ -44,6 +43,15 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:onClick="onPinDeleteClicked"
+                android:layout_marginStart="16dp"
+                android:layout_marginBottom="16dp"
+                />
+            <CheckBox
+                style="?attr/materialButtonElevatedStyle"
+                android:id="@+id/checkEnableBio"
+                android:text="@string/enableBio"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
                 android:layout_marginBottom="16dp"
                 />
