--- a/app/src/main/res/layout/partial_settings.xml
+++ b/app/src/main/res/layout/partial_settings.xml
@@ -2,156 +2,144 @@
 <!-- Скроллируемая часть с полями ввода для SettingsActivity. -->
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:padding="16dp">
+
+    <!-- Блок PIN и Биометрия -->
     <com.google.android.material.card.MaterialCardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginEnd="16dp"
-        >
+        android:layout_marginBottom="16dp"
+        app:contentPadding="16dp">
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            >
+            android:orientation="vertical">
+
             <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="16dp"
-                android:layout_marginStart="16dp"
-                android:layout_marginBottom="16dp"
                 android:text="@string/PIN_BIO_login"
-                android:textSize="16sp"
-                />
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="12dp"
+                android:textSize="16sp" />
+
             <Button
-                style="?attr/materialButtonOutlinedStyle"
                 android:id="@+id/btnChangePIN"
-                android:text="@string/change_PIN"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="16dp"
-                android:layout_marginBottom="16dp"
-                />
-            <Button
                 style="?attr/materialButtonOutlinedStyle"
-                android:id="@+id/btnDeletePIN"
-                android:text="@string/delete_PIN"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="16dp"
-                android:layout_marginBottom="16dp"
-                />
+                android:layout_marginBottom="8dp"
+                android:text="@string/change_PIN" />
+
+            <Button
+                android:id="@+id/btnDeletePIN"
+                style="?attr/materialButtonOutlinedStyle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="8dp"
+                android:text="@string/delete_PIN"
+                app:strokeColor="?attr/colorError"
+                android:textColor="?attr/colorError" />
+
             <CheckBox
                 android:id="@+id/checkEnableBio"
-                android:text="@string/enableBio"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="16dp"
-                android:layout_marginBottom="16dp"
-                />
+                android:text="@string/enableBio" />
         </LinearLayout>
     </com.google.android.material.card.MaterialCardView>
+
+    <!-- Блок Индикатора -->
     <com.google.android.material.card.MaterialCardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginEnd="16dp"
-        >
+        android:layout_marginBottom="16dp"
+        app:contentPadding="16dp">
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            >
+            android:orientation="vertical">
+
             <TextView
+                android:text="@string/progress_indicator"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="16dp"
-                android:layout_marginStart="16dp"
-                android:layout_marginBottom="16dp"
-                android:text="@string/progress_indicator"
-                android:textSize="16sp"
-                />
+                android:layout_marginBottom="12dp"
+                android:textSize="16sp" />
+
             <com.google.android.material.button.MaterialButtonToggleGroup
                 android:id="@+id/toggleProgress"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                app:singleSelection="true"
                 app:selectionRequired="true"
-                android:layout_marginStart="16dp"
-                android:layout_marginBottom="16dp"
-                >
+                app:singleSelection="true">
+
                 <Button
-                    style="?attr/materialButtonOutlinedStyle"
                     android:id="@+id/btnProgressPassed"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/passed"
-                    />
-                <Button
                     style="?attr/materialButtonOutlinedStyle"
-                    android:id="@+id/btnProgressRemaining"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="@string/remaining"
-                    />
+                    android:text="@string/passed" />
+
+                <Button
+                    android:id="@+id/btnProgressRemaining"
+                    style="?attr/materialButtonOutlinedStyle"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/remaining" />
             </com.google.android.material.button.MaterialButtonToggleGroup>
         </LinearLayout>
     </com.google.android.material.card.MaterialCardView>
+
+    <!-- Блок Темы -->
     <com.google.android.material.card.MaterialCardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginEnd="16dp"
-        >
+        app:contentPadding="16dp">
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            >
+            android:orientation="vertical">
+
             <TextView
+                android:text="@string/selectThemeMode"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="16dp"
-                android:layout_marginStart="16dp"
-                android:layout_marginBottom="16dp"
-                android:text="@string/selectThemeMode"
-                android:textSize="16sp"
-                />
+                android:layout_marginBottom="12dp"
+                android:textSize="16sp" />
+
             <com.google.android.material.button.MaterialButtonToggleGroup
                 android:id="@+id/toggleTheme"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                app:singleSelection="true"
                 app:selectionRequired="true"
-                android:layout_marginStart="16dp"
-                android:layout_marginBottom="16dp"
-                >
+                app:singleSelection="true">
+
                 <Button
-                    style="?attr/materialButtonOutlinedStyle"
                     android:id="@+id/btnThemeDay"
+                    style="?attr/materialButtonOutlinedStyle"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="@string/themeDay"
-                    />
+                    android:text="@string/themeDay" />
+
                 <Button
-                    style="?attr/materialButtonOutlinedStyle"
                     android:id="@+id/btnThemeSystem"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/themeSystem"
-                    />
-                <Button
                     style="?attr/materialButtonOutlinedStyle"
-                    android:id="@+id/btnThemeNight"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="@string/themeNight"
-                    />
+                    android:text="@string/themeSystem" />
+
+                <Button
+                    android:id="@+id/btnThemeNight"
+                    style="?attr/materialButtonOutlinedStyle"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/themeNight" />
             </com.google.android.material.button.MaterialButtonToggleGroup>
         </LinearLayout>
     </com.google.android.material.card.MaterialCardView>
