--- a/app/src/main/res/drawable/ic_action_cancel.xml
+++ b/app/src/main/res/drawable/ic_action_cancel.xml
@@ -3,7 +3,8 @@
     android:height="24dp"
     android:viewportWidth="960"
     android:viewportHeight="960"
-    android:tint="?attr/colorOnPrimary">
+    android:tint="?attr/colorOnPrimary"
+    android:alpha="1.0">
   <group android:scaleX="1.2"
       android:scaleY="1.2"
       android:translateX="-96"
