--- a/app/src/main/res/drawable/ic_action_qr.xml
+++ b/app/src/main/res/drawable/ic_action_qr.xml
@@ -3,8 +3,8 @@
     android:height="24dp"
     android:viewportWidth="960"
     android:viewportHeight="960"
-    android:tint="?attr/colorOnPrimaryContainer"
-    android:alpha="0.6">
+    android:tint="?attr/colorOnSurface"
+    android:alpha="0.8">
   <group android:scaleX="1.25"
       android:scaleY="1.25"
       android:translateX="-120"
