--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -7,16 +7,16 @@
     android:id="@+id/frameSettingsActivity"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".SettingsActivity"
-    >
+    tools:context=".SettingsActivity">
+
     <!-- Top AppBar. -->
-    <include layout="@layout/frame_app_bar"/>
+    <include layout="@layout/partial_app_bar"/>
     <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        app:layout_behavior="@string/appbar_scrolling_view_behavior"
-        >
+        app:layout_behavior="@string/appbar_scrolling_view_behavior">
+
         <!-- Скроллируемая часть с полями ввода. -->
-        <include layout="@layout/frame_settings"/>
+        <include layout="@layout/partial_settings"/>
     </androidx.core.widget.NestedScrollView>
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
