--- a/app/src/main/res/layout/dialog_pin.xml
+++ b/app/src/main/res/layout/dialog_pin.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!-- Фрейм диалогового окна для ввоода PIN. -->
+<!-- Фрейм диалогового окна для ввода PIN. -->
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -7,12 +7,12 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:gravity="center"
-    android:orientation="vertical"
-    >
+    android:orientation="vertical">
+
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="280dp"
-        android:layout_height="320dp"
-        >
+        android:layout_height="320dp">
+
         <ImageView
             android:id="@+id/pin1"
             android:layout_width="20dp"
@@ -26,8 +26,8 @@
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintVertical_bias="0.07"
-            tools:ignore="ContentDescription,ImageContrastCheck"
-            />
+            tools:ignore="ContentDescription,ImageContrastCheck" />
+
         <ImageView
             android:id="@+id/pin2"
             android:layout_width="20dp"
@@ -41,8 +41,8 @@
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintVertical_bias="0.07"
-            tools:ignore="ContentDescription,ImageContrastCheck"
-            />
+            tools:ignore="ContentDescription,ImageContrastCheck" />
+
         <ImageView
             android:id="@+id/pin3"
             android:layout_width="20dp"
@@ -56,8 +56,8 @@
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintVertical_bias="0.07"
-            tools:ignore="ContentDescription,ImageContrastCheck"
-            />
+            tools:ignore="ContentDescription,ImageContrastCheck" />
+
         <ImageView
             android:id="@+id/pin4"
             android:layout_width="20dp"
@@ -71,8 +71,8 @@
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintVertical_bias="0.07"
-            tools:ignore="ContentDescription,ImageContrastCheck"
-            />
+            tools:ignore="ContentDescription,ImageContrastCheck" />
+
         <ImageView
             android:id="@+id/pin5"
             android:layout_width="20dp"
@@ -86,8 +86,8 @@
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintVertical_bias="0.07"
-            tools:ignore="ContentDescription,ImageContrastCheck"
-            />
+            tools:ignore="ContentDescription,ImageContrastCheck" />
+
         <ImageView
             android:id="@+id/pin6"
             android:layout_width="20dp"
@@ -101,8 +101,8 @@
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintVertical_bias="0.07"
-            tools:ignore="ContentDescription,ImageContrastCheck"
-            />
+            tools:ignore="ContentDescription,ImageContrastCheck" />
+
         <TextView
             android:id="@+id/errorMessage"
             android:layout_width="wrap_content"
@@ -115,8 +115,8 @@
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintVertical_bias="0.2"
-            tools:text="Неправильный PIN"
-            />
+            tools:text="Неправильный PIN" />
+
         <Button
             style="?attr/materialButtonElevatedStyle"
             android:id="@+id/btn1"
@@ -129,8 +129,8 @@
             app:layout_constraintHorizontal_bias="0.1"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintVertical_bias="0.35"
-            />
+            app:layout_constraintVertical_bias="0.35" />
+
         <Button
             style="?attr/materialButtonElevatedStyle"
             android:id="@+id/btn2"
@@ -143,8 +143,8 @@
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintVertical_bias="0.35"
-            />
+            app:layout_constraintVertical_bias="0.35" />
+
         <Button
             style="?attr/materialButtonElevatedStyle"
             android:id="@+id/btn3"
@@ -157,8 +157,8 @@
             app:layout_constraintHorizontal_bias="0.9"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintVertical_bias="0.35"
-            />
+            app:layout_constraintVertical_bias="0.35" />
+
         <Button
             style="?attr/materialButtonElevatedStyle"
             android:id="@+id/btn4"
@@ -171,8 +171,8 @@
             app:layout_constraintHorizontal_bias="0.1"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintVertical_bias="0.55"
-            />
+            app:layout_constraintVertical_bias="0.55" />
+
         <Button
             style="?attr/materialButtonElevatedStyle"
             android:id="@+id/btn5"
@@ -185,8 +185,8 @@
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintVertical_bias="0.55"
-            />
+            app:layout_constraintVertical_bias="0.55" />
+
         <Button
             style="?attr/materialButtonElevatedStyle"
             android:id="@+id/btn6"
@@ -199,8 +199,8 @@
             app:layout_constraintHorizontal_bias="0.9"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintVertical_bias="0.55"
-            />
+            app:layout_constraintVertical_bias="0.55" />
+
         <Button
             style="?attr/materialButtonElevatedStyle"
             android:id="@+id/btn7"
@@ -213,8 +213,8 @@
             app:layout_constraintHorizontal_bias="0.1"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintVertical_bias="0.75"
-            />
+            app:layout_constraintVertical_bias="0.75" />
+
         <Button
             style="?attr/materialButtonElevatedStyle"
             android:id="@+id/btn8"
@@ -227,8 +227,8 @@
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintVertical_bias="0.75"
-            />
+            app:layout_constraintVertical_bias="0.75" />
+
         <Button
             style="?attr/materialButtonElevatedStyle"
             android:id="@+id/btn9"
@@ -241,8 +241,8 @@
             app:layout_constraintHorizontal_bias="0.9"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintVertical_bias="0.75"
-            />
+            app:layout_constraintVertical_bias="0.75" />
+
         <Button
             style="?attr/materialButtonElevatedStyle"
             android:id="@+id/btnBack"
@@ -257,8 +257,8 @@
             app:layout_constraintVertical_bias="0.95"
             app:layout_constraintBottom_toBottomOf="parent"
             app:iconGravity="textStart"
-            app:iconPadding="0dp"
-            />
+            app:iconPadding="0dp" />
+
         <Button
             style="?attr/materialButtonElevatedStyle"
             android:id="@+id/btn0"
@@ -271,8 +271,8 @@
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintVertical_bias="0.95"
-            />
+            app:layout_constraintVertical_bias="0.95" />
+
         <Button
             style="?attr/materialButtonElevatedStyle"
             android:id="@+id/btnCancel"
@@ -287,9 +287,9 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintVertical_bias="0.95"
             app:iconGravity="textStart"
-            app:iconPadding="0dp"
-            />
+            app:iconPadding="0dp" />
     </androidx.constraintlayout.widget.ConstraintLayout>
+
     <Button
         style="?attr/materialIconButtonStyle"
         android:id="@+id/btnBiomeric"
@@ -299,6 +299,5 @@
         app:icon="@drawable/ic_action_fingerprint"
         app:iconSize="36dp"
         android:visibility="gone"
-        tools:visibility="visible"
-        />
+        tools:visibility="visible" />
 </LinearLayout>
