--- a/app/src/main/res/layout/partial_app_bar_menu.xml
+++ b/app/src/main/res/layout/partial_app_bar_menu.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!-- Фрейм Top AppBar с кнопкой возврата. -->
+<!-- Top AppBar с кнопкой возврата и меню. -->
 <com.google.android.material.appbar.AppBarLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    >
+    android:layout_height="wrap_content">
+
     <com.google.android.material.appbar.MaterialToolbar
         android:id="@+id/topAppBar"
         android:layout_width="match_parent"
@@ -14,5 +14,5 @@
         android:minHeight="?attr/actionBarSize"
         app:navigationIcon="@drawable/ic_action_back"
         tools:title="Генератор TOTP"
-        />
+        app:menu="@menu/top_app_bar" />
 </com.google.android.material.appbar.AppBarLayout>
