--- a/app/src/main/res/layout/partial_fab_qr.xml
+++ b/app/src/main/res/layout/partial_fab_qr.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!-- Фрейм с кнопкой FAB. -->
-<com.google.android.material.floatingactionbutton.FloatingActionButton
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<!-- Кнопка FAB. -->
+<com.google.android.material.floatingactionbutton.FloatingActionButton xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/floatingActionButtonQR"
@@ -13,5 +12,4 @@
     app:layout_constraintBottom_toBottomOf="parent"
     app:layout_constraintEnd_toEndOf="parent"
     app:srcCompat="@drawable/ic_action_qr"
-    tools:ignore="ClassNameCheck,ImageContrastCheck"
-    />
+    tools:ignore="ImageContrastCheck,ClassNameCheck" />
