--- a/app/src/main/res/menu/top_app_bar.xml
+++ b/app/src/main/res/menu/top_app_bar.xml
@@ -1,17 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
-    <group
-        android:id="@+id/group1"
-        android:visible="true"
-        >
-        <item
-            android:orderInCategory="1"
-            android:title="@string/add"
-            android:id="@+id/item_add_token"
-            android:icon="@drawable/ic_action_add"
-            android:contentDescription="@string/add"
-            app:showAsAction="ifRoom"
-            />
-    </group>
+
+    <item
+        android:title="@string/add"
+        android:id="@+id/item_add_token"
+        android:icon="@drawable/ic_action_add"
+        android:contentDescription="@string/add"
+        app:showAsAction="ifRoom" />
+
+    <item
+        android:title="@string/qr"
+        android:id="@+id/item_qr"
+        android:icon="@drawable/ic_action_qr"
+        android:contentDescription="@string/qr"
+        app:showAsAction="ifRoom" />
 </menu>
