--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!-- Layout для MainActivity. -->
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/frameMainActivity"
@@ -10,32 +11,30 @@
     tools:context=".MainActivity"
     tools:ignore="VisualLintBounds">
 
-    <!-- Top AppBar. -->
-    <include layout="@layout/partial_app_bar_menu"/>
-
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1">
-
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/tokensList"
+        <androidx.coordinatorlayout.widget.CoordinatorLayout
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_weight="1"
-            android:divider="@null"
-            tools:listitem="@layout/item_token"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:paddingBottom="100dp"
-            android:clipToPadding="false" />
+            android:layout_weight="1">
 
-        <!-- FAB. -->
-        <include layout="@layout/partial_fab_qr"/>
-    </androidx.constraintlayout.widget.ConstraintLayout>
+            <!-- Top AppBar. -->
+            <include layout="@layout/partial_app_bar_menu" />
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/tokensList"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:divider="@null"
+                tools:listitem="@layout/item_token"
+                tools:itemCount="5"
+                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+                app:layout_behavior="@string/appbar_scrolling_view_behavior"
+                android:paddingBottom="100dp"
+                android:clipToPadding="false" />
+
+            <!-- FAB. -->
+            <include layout="@layout/partial_fab_qr" />
+        </androidx.coordinatorlayout.widget.CoordinatorLayout>
 
     <!-- Top BottomBar. -->
-    <include layout="@layout/partial_bottom_navigation"/>
+    <include layout="@layout/partial_bottom_navigation" />
 </LinearLayout>
