--- a/app/src/main/res/layout/partial_fab_qr.xml
+++ b/app/src/main/res/layout/partial_fab_qr.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!-- Кнопка FAB. -->
-<com.google.android.material.floatingactionbutton.FloatingActionButton xmlns:android="http://schemas.android.com/apk/res/android"
+<com.google.android.material.floatingactionbutton.FloatingActionButton
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/floatingActionButtonQR"
@@ -9,7 +10,6 @@
     android:layout_margin="16dp"
     android:clickable="true"
     android:contentDescription="@string/qr"
-    app:layout_constraintBottom_toBottomOf="parent"
-    app:layout_constraintEnd_toEndOf="parent"
+    android:layout_gravity="bottom|end"
     app:srcCompat="@drawable/ic_action_qr"
     tools:ignore="ImageContrastCheck,ClassNameCheck" />
