--- a/app/src/main/res/layout/partial_settings.xml
+++ b/app/src/main/res/layout/partial_settings.xml
@@ -45,7 +45,7 @@
                 app:strokeColor="?attr/colorError"
                 android:textColor="?attr/colorError" />
 
-            <CheckBox
+            <com.google.android.material.materialswitch.MaterialSwitch
                 android:id="@+id/checkEnableBio"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -65,7 +65,40 @@
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
-            <CheckBox
+            <TextView
+                android:text="@string/TokensGeneration"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="16dp"
+                android:textSize="16sp" />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+                <com.google.android.material.slider.Slider
+                    android:id="@+id/sliderTimeShift"
+                    android:contentDescription="@string/timeShift"
+                    android:layout_width="150dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="8dp"
+                    android:stepSize="1.0"
+                    android:value="0.0"
+                    android:valueFrom="0.0"
+                    android:valueTo="5.0"
+                    />
+
+                <TextView
+                    android:id="@+id/lbColorsSpanCount"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/timeShift"
+                    android:layout_gravity="center_vertical"
+                    android:textSize="14sp" />
+            </LinearLayout>
+
+            <com.google.android.material.materialswitch.MaterialSwitch
                 android:id="@+id/checkEnableNextToken"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
